[package]
name = "explore"
description = "Explore the WWW and find the shortest path between two HTML documents"
license = "MIT"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
url = "2.2"
soup = "0.5"
regex = "1.5"
reqwest = { version = "0.11", features = ["blocking"] }